--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
             android:value="@integer/google_play_services_version" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance"
+            android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,6 +36,14 @@
             android:theme="@android:style/Theme.Translucent" />
 
         <activity android:name=".activities.AboutClass"/>
+
+        <service
+            android:name=".services.DownloadService"
+            android:icon="@drawable/word_learner"
+            android:label="Word Downloader Service"
+            >
+        </service>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
