--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:clearTaskOnLaunch="true">
@@ -22,12 +22,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddWordsActivity"
+            android:name=".activities.AddWordsActivity"
             android:theme="@style/Theme.AddActivity"
             android:label="@string/title_activity_add_words" >
         </activity>
         <activity
-            android:name=".TestWordsActivity"
+            android:name=".activities.TestWordsActivity"
             android:label="@string/title_activity_test_words" >
         </activity>
         <!--Include the AdActivity configChanges and theme. -->
@@ -37,8 +37,11 @@
 
         <activity android:name=".activities.AboutClass"/>
 
+        <activity android:name=".activities.SessionsListActivity"/>
+
         <service
             android:name=".services.DownloadService"
+            android:process=":word_downloader"
             android:icon="@drawable/word_learner"
             android:label="Word Downloader Service"
             >
