--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sachinshinde.wordlearner" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Design" >
-        <!--This meta-data tag is required to use Google Play Services.-->
-        <meta-data android:name="com.google.android.gms.version"
+
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".activities.MainActivity"
+            android:clearTaskOnLaunch="true"
             android:label="@string/app_name"
-            android:launchMode="singleInstance"
-            android:clearTaskOnLaunch="true">
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,35 +31,32 @@
         </activity>
         <activity
             android:name=".activities.AddWordsActivity"
-            android:theme="@style/Theme.AddActivity"
-            android:label="@string/title_activity_add_words" >
+            android:label="@string/title_activity_add_words"
+            android:theme="@style/Theme.AddActivity" >
         </activity>
         <activity
             android:name=".activities.TestWordsActivity"
             android:label="@string/title_activity_test_words" >
         </activity>
-        <!--Include the AdActivity configChanges and theme. -->
-        <activity android:name="com.google.android.gms.ads.AdActivity"
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
-
-        <activity android:name=".activities.AboutClass"/>
-
-        <activity android:name=".activities.SessionsListActivity"/>
+        <activity android:name=".activities.AboutClass" />
+        <activity android:name=".activities.SessionsListActivity" />
 
         <service
             android:name=".services.DownloadService"
-            android:process=":word_downloader"
             android:icon="@drawable/word_learner"
             android:label="Word Downloader Service"
-            >
+            android:process=":word_downloader" >
         </service>
 
+        <activity
+            android:name=".activities.SessionDetailsActivity"
+            android:label="@string/title_activity_session_details" >
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
